SFDC Automation/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder 800 Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder web site visitor via web search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruckerAds.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucker.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommercialTruckTrader.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Cross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad Purl Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Generated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Changed_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To track if a lead status changed in SFDC by non marketing integration users.</description>
        <label>Lead Status Changed in SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Indicator__c</fullName>
        <formula>IF( OR(AND((NOW() -CreatedDate) &gt;= 2, ISPICKVAL( Status, &quot;Unread&quot;)),AND((NOW() -CreatedDate) &gt;= 4, ISPICKVAL(Status, &quot;Accepted&quot;)), AND((NOW() -CreatedDate) &gt;= 6, ISPICKVAL(Status, &quot;Contacted&quot;))),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)
)</formula>
        <label>Lead Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>UTC Manager Lead</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Id__c</fullName>
        <description>For Data Migration 1/11/11</description>
        <externalId>true</externalId>
        <label>Legacy Lead Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Id__c</fullName>
        <label>Legacy Owner Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGR_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MGR_NAME__c</fullName>
        <label>Manager Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGR_TITLE__c</fullName>
        <label>Manager Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out_Reason__c</fullName>
        <label>Mail Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutofMail__c</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maildrop__c</fullName>
        <label>Maildrop</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MasterId__c</fullName>
        <externalId>true</externalId>
        <label>MasterId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>National_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please indicate if this should be a National Account</inlineHelpText>
        <label>National Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTHERCOMMENTS__c</fullName>
        <description>Other comments related to the lead</description>
        <label>Other Comments</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Customer_Name__c</fullName>
        <label>Other Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner (Copy)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PHONE_EXTN__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>FSL VOSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL Choice Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL Flex Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Polk_total_class_3_8__c</fullName>
        <label>Polk total class 3-8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Duplicate Leads</relationshipLabel>
        <relationshipName>DuplicateLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA10__c</fullName>
        <label>QA10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA11__c</fullName>
        <label>QA11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA12__c</fullName>
        <label>QA12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QUEUE_DESC__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Queue Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quartile__c</fullName>
        <label>Quartile</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RAM_Name__c</fullName>
        <label>RAM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>DBD Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECEIVED_MAIL_FOR_LEAD_BIT__c</fullName>
        <label>Received Mail for Lead</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_disqualifying__c</fullName>
        <inlineHelpText>Disqualification reason</inlineHelpText>
        <label>Reason for disqualifying</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Copy__c</fullName>
        <label>Region Copy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Grabs Region from Owner record.</description>
        <formula>Owner_Copy__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renurture_Date__c</fullName>
        <label>Renurture_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renurture_Disqualify__c</fullName>
        <description>Explains why lead is being disqualified or changed to re-nurture stage</description>
        <label>Renurture Disqualify</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Used Truck Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakdown Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not want to be called</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR/ Driver Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRC Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful after multiple attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing: 0 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing: 6 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing: 12 to 18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing: More than 18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No credit approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Id__c</fullName>
        <label>SFDC_Acct_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_CODE_x__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>SIC Code_x</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Desc__c</fullName>
        <formula>SIC_Code__r.ext_SICCodeID__c + &apos;-&apos; + SIC_Code__r.SIC_Code_Description__c</formula>
        <label>SIC Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the SIC Code Table</description>
        <label>SIC Code</label>
        <referenceTo>SIC_Code__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRC_UNQ_IDT__c</fullName>
        <label>SRC_UNQ_IDT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSPECT_LOC_ID__c</fullName>
        <description>Ties the lead to suspect location</description>
        <label>Suspect Location ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory1__c</fullName>
        <label>Sales Territory1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <description>Grabs sales territory from lead owner</description>
        <formula>Owner_Copy__r.Sales_Territory__c</formula>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_US_Range__c</fullName>
        <label>Sales Volume US Range</label>
        <picklist>
            <picklistValues>
                <fullName>No data or 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,000,000-9,999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000,000 - 499,999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,000,000 and above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,500-4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000-99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000-249,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250,000-499,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,000-999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000,000-2,999,999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SapID__c</fullName>
        <description>This field will be used by web to lead users to get credit for the leads.</description>
        <label>SapID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scotts_ID_Canada_only__c</fullName>
        <label>Scotts ID (Canada only)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Three trucks or less</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Three Trucks or Less (Bargain Hunter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Brgn hunters Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Cap builders Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Time-crit del Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Brgn hunters Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Cap bld Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Time-crit del Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Brgn hunters Lrg fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Sophisticated 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Sophisticated 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_VSR_VSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to VSR VSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sic_Code_Desc_del__c</fullName>
        <label>SIC Code Description_del</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Duns__c</fullName>
        <description>SITE DUNS of the lead location</description>
        <label>Site Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Comment__c</fullName>
        <label>Source Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Active__c</fullName>
        <description>Customer staus to control visibility.</description>
        <label>Status Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out_Reason__c</fullName>
        <label>Survey Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutofSurvey__c</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspect_Id__c</fullName>
        <description>Ties the lead to suspect</description>
        <externalId>true</externalId>
        <label>Suspect ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tractor_Estimate__c</fullName>
        <label>Tractor Estimate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradestyle_Canada_only__c</fullName>
        <label>Tradestyle (Canada only)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailer_Estimate__c</fullName>
        <label>Trailer Estimate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Usages__c</fullName>
        <label>Truck Usages</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTC_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UTC Assigned</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Leads (UTC Assigned)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>The field use for Vehicle Unit sent from Eloqua as UVS Lead and will be used to autopopulate Customer Needs at the time of creation</description>
        <label>Unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VEHICLE_CNT__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <label>Vehicle Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_count_source__c</fullName>
        <label>Vehicle count source</label>
        <picklist>
            <picklistValues>
                <fullName>-- None --</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Owner__c</fullName>
        <label>Web Lead Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>how_long_in_business__c</fullName>
        <label>How long in business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Suspects</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>VEHICLE_CNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Suspect</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Lathan</value>
        </filters>
        <filters>
            <field>VEHICLE_CNT__c</field>
            <operation>greaterThan</operation>
            <value>29</value>
        </filters>
        <label>All Suspects</label>
        <sharedTo>
            <group>AllMarketingFMC</group>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_C_Concentrix_Leads</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>DISPOSITION_CODE__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Concentrix</value>
        </filters>
        <filters>
            <field>DISPOSITION_CODE__c</field>
            <operation>startsWith</operation>
            <value>B Lead</value>
        </filters>
        <filters>
            <field>DISPOSITION_CODE__c</field>
            <operation>startsWith</operation>
            <value>C Lead</value>
        </filters>
        <label>B &amp; C Concentrix Leads</label>
        <sharedTo>
            <group>SystemAdmin</group>
            <role>TSA_Central</role>
            <role>TSA_Manager</role>
            <role>TSA_National_West</role>
            <role>TSA_Northeast</role>
        </sharedTo>
    </listViews>
</CustomObject>